// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileHeader shifts between visualization modes 1`] = `
<DocumentFragment>
  <div
    data-mode="large"
    role="toolbar"
  >
    <div
      class="navbar"
    >
      <input
        class="search "
        data-testid="flamegraph-search"
        name="flamegraph-search"
        placeholder="Search…"
        type="search"
        value=""
      />
      <div
        class="space-filler"
      />
      <select
        aria-label="fit-mode"
        class="fit-mode-select"
      >
        <option
          disabled=""
        >
          Prefer to Fit
        </option>
        <option
          value="HEAD"
        >
          Head first
        </option>
        <option
          value="TAIL"
        >
          Tail first
        </option>
      </select>
      <button
        class="button  default undefined"
        data-testid="reset-view"
        disabled=""
        id="reset"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-undo fa-w-16 iconWithText"
          data-icon="undo"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M212.333 224.333H12c-6.627 0-12-5.373-12-12V12C0 5.373 5.373 0 12 0h48c6.627 0 12 5.373 12 12v78.112C117.773 39.279 184.26 7.47 258.175 8.007c136.906.994 246.448 111.623 246.157 248.532C504.041 393.258 393.12 504 256.333 504c-64.089 0-122.496-24.313-166.51-64.215-5.099-4.622-5.334-12.554-.467-17.42l33.967-33.967c4.474-4.474 11.662-4.717 16.401-.525C170.76 415.336 211.58 432 256.333 432c97.268 0 176-78.716 176-176 0-97.267-78.716-176-176-176-58.496 0-110.28 28.476-142.274 72.333h98.274c6.627 0 12 5.373 12 12v48c0 6.627-5.373 12-12 12z"
            fill="currentColor"
          />
        </svg>
        Reset View
      </button>
      <button
        class="button  default undefined"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-compress-alt fa-w-14 iconWithText"
          data-icon="compress-alt"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.686 427.314L104 328l-32.922-31.029C55.958 281.851 66.666 256 88.048 256h112C213.303 256 224 266.745 224 280v112c0 21.382-25.803 32.09-40.922 16.971L152 376l-99.314 99.314c-6.248 6.248-16.379 6.248-22.627 0L4.686 449.941c-6.248-6.248-6.248-16.379 0-22.627zM443.314 84.686L344 184l32.922 31.029c15.12 15.12 4.412 40.971-16.97 40.971h-112C234.697 256 224 245.255 224 232V120c0-21.382 25.803-32.09 40.922-16.971L296 136l99.314-99.314c6.248-6.248 16.379-6.248 22.627 0l25.373 25.373c6.248 6.248 6.248 16.379 0 22.627z"
            fill="currentColor"
          />
        </svg>
        Focus on subtree
      </button>
      <div
        class="btn-group viz-switch"
      >
        <button
          class="button grouped default undefined"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-table fa-w-16 iconWithText"
            data-icon="table"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M464 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48zM224 416H64v-96h160v96zm0-160H64v-96h160v96zm224 160H288v-96h160v96zm0-160H288v-96h160v96z"
              fill="currentColor"
            />
          </svg>
          Table
        </button>
        <button
          class="button grouped primary undefined"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-columns fa-w-16 iconWithText"
            data-icon="columns"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M464 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48zM224 416H64V160h160v256zm224 0H288V160h160v256z"
              fill="currentColor"
            />
          </svg>
          Both
        </button>
        <button
          class="button grouped default undefined"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-icicles fa-w-16 iconWithText"
            data-icon="icicles"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M511.4 37.9C515.1 18.2 500 0 480 0H32C10.6 0-4.8 20.7 1.4 41.2l87.1 273.4c2.5 7.2 12.7 7.2 15.1 0L140 190.5l44.2 187.3c1.9 8.3 13.7 8.3 15.6 0l46.5-196.9 34.1 133.4c2.3 7.6 13 7.6 15.3 0l45.8-172.5 66.7 363.8c1.7 8.6 14 8.6 15.7 0l87.5-467.7z"
              fill="currentColor"
            />
          </svg>
          Flamegraph
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProfileHeader shifts between visualization modes 2`] = `
<DocumentFragment>
  <div
    data-mode="small"
    role="toolbar"
  >
    <div
      class="navbar"
    >
      <input
        class="search search-small"
        data-testid="flamegraph-search"
        name="flamegraph-search"
        placeholder="Search…"
        type="search"
        value=""
      />
      <div
        class="space-filler"
      />
      <select
        aria-label="fit-mode"
        class="fit-mode-select"
      >
        <option
          disabled=""
        >
          Fit
        </option>
        <option
          value="HEAD"
        >
          Head
        </option>
        <option
          value="TAIL"
        >
          Tail
        </option>
      </select>
      <button
        class="button  default undefined"
        data-testid="reset-view"
        disabled=""
        id="reset"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-undo fa-w-16 iconWithText"
          data-icon="undo"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M212.333 224.333H12c-6.627 0-12-5.373-12-12V12C0 5.373 5.373 0 12 0h48c6.627 0 12 5.373 12 12v78.112C117.773 39.279 184.26 7.47 258.175 8.007c136.906.994 246.448 111.623 246.157 248.532C504.041 393.258 393.12 504 256.333 504c-64.089 0-122.496-24.313-166.51-64.215-5.099-4.622-5.334-12.554-.467-17.42l33.967-33.967c4.474-4.474 11.662-4.717 16.401-.525C170.76 415.336 211.58 432 256.333 432c97.268 0 176-78.716 176-176 0-97.267-78.716-176-176-176-58.496 0-110.28 28.476-142.274 72.333h98.274c6.627 0 12 5.373 12 12v48c0 6.627-5.373 12-12 12z"
            fill="currentColor"
          />
        </svg>
        Reset
      </button>
      <button
        class="button  default undefined"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-compress-alt fa-w-14 iconWithText"
          data-icon="compress-alt"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4.686 427.314L104 328l-32.922-31.029C55.958 281.851 66.666 256 88.048 256h112C213.303 256 224 266.745 224 280v112c0 21.382-25.803 32.09-40.922 16.971L152 376l-99.314 99.314c-6.248 6.248-16.379 6.248-22.627 0L4.686 449.941c-6.248-6.248-6.248-16.379 0-22.627zM443.314 84.686L344 184l32.922 31.029c15.12 15.12 4.412 40.971-16.97 40.971h-112C234.697 256 224 245.255 224 232V120c0-21.382 25.803-32.09 40.922-16.971L296 136l99.314-99.314c6.248-6.248 16.379-6.248 22.627 0l25.373 25.373c6.248 6.248 6.248 16.379 0 22.627z"
            fill="currentColor"
          />
        </svg>
        Focus
      </button>
      <div
        class="btn-group viz-switch"
      >
        <select
          aria-label="view"
          name="view"
        >
          <option
            value="table"
          >
            Table
          </option>
          <option
            value="both"
          >
            Both
          </option>
          <option
            value="flamegraph"
          >
            Flame
          </option>
        </select>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
